// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacer /> renders correctly when bottom is set 1`] = `
<div
  className="sc-bdVaJa jjfMCK"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when horizontal is set 1`] = `
<div
  className="sc-bdVaJa eZxERx"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when left is set 1`] = `
<div
  className="sc-bdVaJa eKNkPY"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when right is set 1`] = `
<div
  className="sc-bdVaJa fojQDr"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when top is set 1`] = `
<div
  className="sc-bdVaJa grZIQv"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when vertical is set 1`] = `
<div
  className="sc-bdVaJa cJzrXM"
  size="1rem"
/>
`;
